--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"mongoose": "^6.2.11",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"slugify": "^1.6.5",
+		"validator": "^13.7.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
